src/objects/Apttus_Config2__DataValidationRule__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_Config2__Description__c</fullName>
        <description>The description for the rule</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The description for the rule</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Message__c</fullName>
        <description>The message that will be displayed to user in case of error or warning</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The message that will be displayed to user in case of error or warning</inlineHelpText>
        <label>Message</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SourceObjectField__c</fullName>
        <description>API name of the source object field against which the target object field will be validated</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>API name of the source object field against which the target object field will be validated</inlineHelpText>
        <label>Source Object Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TargetObjectField__c</fullName>
        <description>API name of the target object field for which value needs to be validated</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>API name of the target object field for which value needs to be validated</inlineHelpText>
        <label>Target Object Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>